<resources>
    <string name="app_name">MessApp</string>
    <string name="email_field">Email ID</string>
    <string name="password_field">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_drawer">Menu</string>
    <string name="rate_drawer">Rate</string>
    <string name="updateSeats_drawer">Update Seats</string>
    <string name="list_of_students">List of Students</string>

    <string name="save">Save</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="tea">Tea</string>
    <string name="dinner">Dinner</string>
    <string name="rate">Daily Rate</string>
    <string name="numOfSeats">No: of Seats</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="book">Book</string>
    <string name="not_booked">Booking Not Done</string>

    <string name="mess_prompt">Select mess</string>

    <string-array name="mess_arrays">
        <item>Select Mess</item>
        <item>B</item>
        <item>D</item>
    </string-array>

</resources>
