<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_drawer" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rate_drawer" />
        <item
            android:id="@+id/nav_updateSeats"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/updateSeats_drawer" />
        <item
            android:id="@+id/nav_listOfStudents"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/list_of_students" />
    </group>

</menu>
