<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.satish.messapp.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_field"
            android:textSize="14sp"
            android:paddingTop="10dp"/>
        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:inputType="textEmailAddress"/>
        <TextView
            android:id="@+id/password_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_field"
            android:textSize="14sp"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingTop="10dp" />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:paddingTop="10dp"/>
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:paddingTop="10dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
