<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.satish.messapp.StudentActivity"
    tools:showIn="@layout/app_bar_student">

    <LinearLayout
        android:id="@+id/student_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_prompt"
            android:text="@string/not_booked"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingBottom="10dp"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_dues"
            android:textSize="18sp"
            android:textColor="#ff0000"
            android:paddingTop="30dp"
            android:textAlignment="center"
            android:visibility="gone"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/mess_selector"
            android:entries="@array/mess_arrays"
            android:prompt="@string/mess_prompt"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_mess_menu"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/student_layout_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="5dp"
                    android:text="@string/breakfast"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/menu_breakfast"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_layout_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="5dp"
                    android:text="@string/lunch"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/menu_lunch"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_layout_tea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="5dp"
                    android:text="@string/tea"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/menu_tea"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_layout_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:padding="5dp"
                    android:text="@string/dinner"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/menu_dinner"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="17sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chosen_mess_details"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/student_layout_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:padding="5dp"
                    android:text="@string/rate"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/menu_rate"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_layout_numOfSeats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:padding="5dp"
                    android:text="@string/numOfSeats"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/menu_numOfSeats"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="17sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/book_button"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/book"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/save_button"/>

        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
